--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -12,6 +12,8 @@
     "comma-dangle": 0,
     "class-methods-use-this": 0,
     "no-console": 0,
+    "no-restricted-globals": 0,
+    "arrow-parens": 0,
     "max-len": ["error", { "code": 140 }]
   },
   "parserOptions": {
