--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -14,6 +14,7 @@
     "no-console": 0,
     "no-restricted-globals": 0,
     "arrow-parens": 0,
+    "no-param-reassign": 0,
     "max-len": ["error", { "code": 140 }]
   },
   "parserOptions": {
