--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -9,6 +9,7 @@
   },
   "rules": {
     "linebreak-style": 0,
+    "object-curly-newline": 0,
     "comma-dangle": 0,
     "class-methods-use-this": 0,
     "no-console": 0,
