--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -16,6 +16,7 @@
     "no-restricted-globals": 0,
     "arrow-parens": 0,
     "no-param-reassign": 0,
+    "no-trailing-spaces": 0,
     "max-len": ["error", { "code": 140 }]
   },
   "parserOptions": {
