--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "eslint": "^5.7.0",
     "moment": "^2.22.2",
+    "portal-vue": "^1.4.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.3.2",
