--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -17,6 +17,7 @@
     "arrow-parens": 0,
     "no-param-reassign": 0,
     "no-trailing-spaces": 0,
+    "import/prefer-default-export": 0,
     "max-len": ["error", { "code": 140 }]
   },
   "parserOptions": {
