--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -18,6 +18,7 @@
     "no-param-reassign": 0,
     "no-trailing-spaces": 0,
     "import/prefer-default-export": 0,
+    "consistent-return": 0,
     "max-len": ["error", { "code": 140 }]
   },
   "parserOptions": {
